# sihnpy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  changelog.md  conf.py  download_pad_data.md  example.ipynb  fingerprinting_module.ipynb  index.md  make.bat  requirements.txt
docs/0.pad_data/: datasets_usage.ipynb  datasets_usage.md  download_pad_data.md  index.md
docs/1.fingerprinting/: fingerprinting_module.ipynb  fp_intro.md  fp_tab_module.ipynb  index.md
docs/2.spex/: index.md  spex_details.ipynb  spex_intro.md  spex_module.ipynb
docs/3.sliding_window/: index.md  sw_intro.md  sw_module.ipynb
docs/4.imbalance_mapping/: imb_intro.md  imb_module.ipynb  index.md
docs/_html/: robots.txt
others/: CONP_CLEAN_STRUC_DATA.py  SE_sim_data.py  SPEX_TESTS.py  SW_sim_data.py  SW_tests.py
src/sihnpy/: __init__.py  datasets.py  fingerprinting.py  imbalance_mapping.py  sliding_window.py  spatial_extent.py
src/sihnpy/data/fingerprinting/: fp_simulated_id_list.csv
src/sihnpy/data/fingerprinting/matrices_simulated_mod1/: mat_04a.txt  mat_05a.txt
src/sihnpy/data/fingerprinting/matrices_simulated_mod2/: mat_010a.txt  mat_03a.txt  mat_06a.txt
src/sihnpy/data/fingerprinting_tab/: conp_fsv7_1_0_aseg.csv
src/sihnpy/data/imbalance_mapping/: conp_fsv7_1_0_thickness.csv  conp_fsv7_1_0_volume.csv
src/sihnpy/data/pad_conp_minimal/: participants.tsv
src/sihnpy/data/pad_conp_minimal/BL00/encoding/: sub-1000173_ses-BL00_task-encoding_run-1.tsv  sub-1004359_ses-BL00_task-encoding_run-1.tsv  sub-1016072_ses-BL00_task-encoding_run-1.tsv  sub-1031654_ses-BL00_task-encoding_run-2.tsv  sub-1072774_ses-BL00_task-encoding_run-1.tsv  sub-1076159_ses-BL00_task-encoding_run-1.tsv  sub-1121981_ses-BL00_task-encoding_run-1.tsv  sub-1154932_ses-BL00_task-encoding_run-1.tsv  sub-1176949_ses-BL00_task-encoding_run-1.tsv  sub-1177880_ses-BL00_task-encoding_run-1.tsv  (+2 more)
src/sihnpy/data/sliding_window/: conp_simulated_age_data.csv
src/sihnpy/data/spatial_extent/: conp_simulated_tau-PET_data.csv  regional_averages.csv  regional_thresholds.csv
tests/: test_datasets.py  test_fingerprinting.py  test_imbalance_mapping.py  test_sihnpy.py  test_sliding_window.py  test_spatial_extent.py
tests/test_data/fingerprinting/: id_list.csv  id_list.txt
tests/test_data/fingerprinting/matrices_mod1/: mat_02a.txt  mat_07a.txt  mat_08a.txt
tests/test_data/fingerprinting/matrices_mod2/: mat_01a.txt  mat_09a.txt
tests/test_data/fingerprinting/output/test/: fp_metrics_test.csv
tests/test_data/spatial_extent/: tau_data.csv
(+82 files in other folders)
