[tool.poetry]
name = "sihnpy"
version = "0.1.0"
description = "Study of inter-individual heterogeneity of neuroimaging in Python (SIHNpy)"
authors = ["Frederic St-Onge", "Gabriel St-Onge"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
