[tool.poetry]
name = "sihnpy"
version = "0.3.0"
description = "Study of inter-individual heterogeneity of neuroimaging in Python (SIHNpy)"
authors = ["Frederic St-Onge", "Gabriel St-Onge"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.9.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^4.0.0"
python-semantic-release = "^7.33.0"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version" # corrected based on 7.33.0 documentation 
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
